[gd_scene load_steps=13 format=3 uid="uid://cdl8vm2yfspxv"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_uf3bc"]
[ext_resource type="AudioStream" uid="uid://h1cy0til60hb" path="res://sounds/hitHurt.wav" id="3_bxvpr"]
[ext_resource type="Script" path="res://scripts/image.gd" id="3_dcja2"]
[ext_resource type="Texture2D" uid="uid://qp4omr0thxfs" path="res://images/dog1.jpg" id="3_h3bt4"]
[ext_resource type="Texture2D" uid="uid://dwpothqfbifg0" path="res://images/dog2.jpg" id="4_2puau"]
[ext_resource type="Texture2D" uid="uid://hsg6q66kxb24" path="res://images/dog3.jpg" id="5_nlx4f"]
[ext_resource type="Texture2D" uid="uid://cufwtikfv63j3" path="res://images/dog4.jpg" id="6_jh225"]
[ext_resource type="AudioStream" uid="uid://cm0gf3i8ocpyl" path="res://sounds/bell.wav" id="7_k4tvo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qqj33"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_80pap"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u0q7o"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_758bv"]
bg_color = Color(1, 1, 1, 1)

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Choice1" type="Button" parent="."]
modulate = Color(0.0500001, 1, 0, 1)
layout_mode = 0
offset_left = 283.0
offset_top = 69.0
offset_right = 541.0
offset_bottom = 327.0
theme_override_styles/normal = SubResource("StyleBoxFlat_qqj33")

[node name="Choice2" type="Button" parent="."]
modulate = Color(1, 0.95, 0, 1)
layout_mode = 0
offset_left = 544.0
offset_top = 69.0
offset_right = 802.0
offset_bottom = 327.0
theme_override_styles/normal = SubResource("StyleBoxFlat_80pap")

[node name="Choice3" type="Button" parent="."]
layout_mode = 0
offset_left = 283.0
offset_top = 330.0
offset_right = 541.0
offset_bottom = 588.0
theme_override_styles/normal = SubResource("StyleBoxFlat_u0q7o")

[node name="Choice4" type="Button" parent="."]
modulate = Color(0, 0.533333, 1, 1)
layout_mode = 0
offset_left = 544.0
offset_top = 330.0
offset_right = 802.0
offset_bottom = 588.0
theme_override_styles/normal = SubResource("StyleBoxFlat_758bv")

[node name="ScoreCounter" type="Label" parent="."]
layout_mode = 0
offset_left = -175.0
offset_top = 117.0
offset_right = 227.0
offset_bottom = 432.0
theme_override_font_sizes/font_size = 201
text = "0
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AttemptCounter" type="Label" parent="."]
layout_mode = 0
offset_left = -69.0
offset_top = 34.0
offset_right = 222.0
offset_bottom = 186.0
theme_override_font_sizes/font_size = 61
text = "0 / 24"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GameManager" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_uf3bc")

[node name="Image" type="Sprite2D" parent="."]
position = Vector2(544, 328)
texture = ExtResource("5_nlx4f")
region_enabled = true
region_rect = Rect2(287.5, 73.53, 600, 600)
script = ExtResource("3_dcja2")
images = Array[Texture2D]([ExtResource("3_h3bt4"), ExtResource("4_2puau"), ExtResource("5_nlx4f"), ExtResource("6_jh225")])

[node name="PingSoundEffect" type="AudioStreamPlayer2D" parent="."]
position = Vector2(844, 32)
stream = ExtResource("7_k4tvo")
pitch_scale = 2.82
attenuation = 0.615572

[node name="DudSoundEffect" type="AudioStreamPlayer2D" parent="."]
position = Vector2(844, 32)
stream = ExtResource("3_bxvpr")

[node name="HTTP" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Choice1" to="GameManager" method="on_press"]
[connection signal="pressed" from="Choice2" to="GameManager" method="on_press"]
[connection signal="pressed" from="Choice3" to="GameManager" method="on_press"]
[connection signal="pressed" from="Choice4" to="GameManager" method="on_press"]
[connection signal="request_completed" from="HTTP" to="GameManager" method="_on_http_request_completed"]
